--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,20 +26,23 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: '11'
+	
+    ## gitignore한 파일 생성해주기
+    ## create application.properties
+    - name: make application-aws.properties
+      if: true # branch가 develop일 때
+      run: |
+	  # spring의 resources 경로로 이동 
+	  cd ./src/main/resources
+	  touch ./application.properties
+	  # GitHub-Actions에서 설정한 값을 application-aws.properties 파일에 쓰기
+	  echo "${{ secrets.PROPERTIES }}" > ./application.properties
     
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     
     - name: Build with Gradle
       run: ./gradlew clean build
-      
-      # 전송할 파일을 담을 디렉토리 생성
-    - name: Make Directory for deliver
-      run: mkdir deploy
-
-      # Jar 파일 Copy
-    - name: Copy Jar
-      run: cp ./build/libs/*.jar ./deploy/
 
       # 압축파일 형태로 전달
     - name: Make zip file
@@ -55,3 +58,11 @@ jobs:
         --region ap-northeast-2 \
         --acl private \ 
 	  ./springboot-intro-build.zip s3://springboot-intro-build/
+	  
+      # s3에 압축한 zip파일 업로드
+    - name: Upload to S3
+      run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+
+      # s3에 업로드한 파일 code Deploy에서 배포 요청
+    - name: Code Deploy
+      run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name $DEPLOYMENT_GROUP_NAME --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
