--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,68 +1,62 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
+# This is a basic workflow to help you get started with Actions
+name: Build and Deploy Spring Boot to AWS EC2
 
-# Repo Action 페이지에 나타날 이름 
-name: Spring Boot & Gradle CI/CD 
-
-# Event Trigger
-# master branch에 push 또는 pull request가 발생할 경우 동작
-# branch 단위 외에도, tag나 cron 식 등을 사용할 수 있음 
+# main 브랜치에 푸쉬 했을때
 on:
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
 jobs:
   build:
-    # 실행 환경 지정
-    runs-on: ubuntu-latest
-
-    # Task의 sequence를 명시한다.
+    runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: '11'
-	
-    # gitignore한 파일 생성해주기
-    # create application.properties
-    - name: make application-aws.properties
-      if: true # branch가 develop일 때
-      run: |
-	  # spring의 resources 경로로 이동 
-	  cd ./src/main/resources
-	  touch ./application.properties
-	  # GitHub-Actions에서 설정한 값을 application-aws.properties 파일에 쓰기
-	  echo "${{ secrets.PROPERTIES }}" > ./application.properties
-    
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    
-    - name: Build with Gradle
-      run: ./gradlew clean build
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: Setup Java JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+       
+       ## gitignore한 파일 생성해주기
+       ## create application.properties
+      - name: make application.properties
+        if: true # branch가 develop일 때
+        run: |
+          # spring의 resources 경로로 이동 
+          cd ./src/main/resources
+          touch ./application-aws.properties
+          # GitHub-Actions에서 설정한 값을 application-aws.properties 파일에 쓰기
+          echo "${{ secrets.PROPERTIES }}" > ./application-aws.properties
+        shell: bash
 
-      # 압축파일 형태로 전달
-    - name: Make zip file
-      run: zip -r -qq -j ./springboot-intro-build.zip ./deploy
+        #gradlew 파일 실행권한 설정
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+        shell: bash
 
-      # S3 Bucket으로 copy
-    - name: Deliver to AWS S3
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        aws s3 cp \
-        --region ap-northeast-2 \
-        --acl private \ 
-	  ./springboot-intro-build.zip s3://springboot-intro-build/
-	  
-      # s3에 압축한 zip파일 업로드
-    - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+        #빌드 시작
+      - name: Build with Gradle
+        run: ./gradlew build
+        shell: bash
 
-      # s3에 업로드한 파일 code Deploy에서 배포 요청
-    - name: Code Deploy
-      run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name $DEPLOYMENT_GROUP_NAME --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
+        #프로젝트 zip파일로 압축
+      - name: Make Zip File
+        run: zip -qq -r ./$GITHUB_SHA.zip .
+        shell: bash
+
+        #aws 접근 id, key
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
+        # s3에 압축한 zip파일 업로드
+      - name: Upload to S3
+        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+
+        # s3에 업로드한 파일 code Deploy에서 배포 요청
+      - name: Code Deploy
+        run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name $DEPLOYMENT_GROUP_NAME --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
