--- a/appspec.yml
+++ b/appspec.yml
@@ -15,6 +15,6 @@ permissions:
 
 hooks:
   AfterInstall:
-    - location: /scripts/deploy.sh
+    - location: deploy.sh
       timeout: 60
       runas: ubuntu
